--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
-    "mongoose": "^8.16.0"
+    "mongoose": "^8.16.0",
+    "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
