--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "express-handlebars": "^8.0.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.16.0",
-    "mongoose-slug-generator": "^1.0.4"
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
