--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-handlebars": "^8.0.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.16.0",
+    "mongoose-delete": "^1.0.2",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
