--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.16.0",
     "mongoose-delete": "^1.0.2",
+    "mongoose-sequence": "^6.0.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
