--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "dependencies": {
     "@icon/open-iconic": "^1.1.1-alpha.3",
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "express-handlebars": "^8.0.3",
+    "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.16.0",
     "mongoose-delete": "^1.0.2",
