--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^8.16.0",
     "mongoose-delete": "^1.0.2",
     "mongoose-sequence": "^6.0.1",
+    "multer": "^2.0.2",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
